<resources>
    <string name="app_name">PracticaFinalVictorPaz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!--  Fragment Audio  -->
    <string name="titleAudio">Grabador de audio</string>
    <string name="btnGrabar">Grabar</string>
    <string name="btnPausar">Pausa</string>
    <string name="btnDetener">Detener</string>

    <!-- Drawer -->
    <string name="home">Home</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="camara">Camara</string>

    <!-- Fragment Camera -->
    <string name="tomar_foto">Tomar Foto</string>

</resources>