<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/mic_24"
            android:title="@string/audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/video" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/camera_alt_24"
            android:title="@string/camara" />

    </group>
</menu>