<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practicafinalvictorpaz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_audio"
        android:name="com.example.practicafinalvictorpaz.FragmentAudio"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_audio" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.practicafinalvictorpaz.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_self"
            app:destination="@id/nav_slideshow" />
    </fragment>
    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.practicafinalvictorpaz.FragmentVideo"
        android:label="FragmentVideo" />
</navigation>